# collabsort-agent

./: README.md  curriculum.json  pyproject.toml
.github/workflows/: ci.yaml
src/collabsort_agent/: agent.py  config.py  demo.py  metrics_tracker.py  train.py  train_curriculum.py
src/collabsort_agent/decision/: __init__.py  ard.py  decision.py  decision_rule.py  epsilon_greedy.py  exploration_decay.py  greedy.py  policy.py
src/collabsort_agent/learning/: __init__.py  c51.py  dd_dqn.py  double_dqn  double_dqn.py  dqn.py  dueling_dqn.py  learning.py  n_step_learning.py  noisy_dqn.py  per.py  ppo.py  q_learning.py  rainbow_dqn.py
src/collabsort_agent/memory/: __init__.py  gru.py  memory.py  stack.py  (+2 more)
tests/: test_decision.py  test_dqn.py  test_exploration_decay.py  test_learning.py  test_memory.py  test_perception.py  test_training.py  test_training_curriculum.py
tests/decision/: test_ard.py  test_exploration_decay.py  test_greedy.py
tests/learning/: test_dd_dqn.py  test_double_dqn.py  test_dqn.py  test_dueling_dqn.py  test_n_step_learning.py  test_noisy_dqn.py  test_per.py  test_ppo.py  test_q_learning.py  test_rainbow_dqn.py
tests/memory/: test_gru.py  test_stack.py  test_stack_target.py  test_target.py
tests/test_learning/: test_dd_dqn.py  test_double_dqn.py  test_dqn.py  test_dueling_dqn.py  test_n_step_learning.py  test_per.py  test_q_learning.py
tests/tests_decision/: test_exploration_decay.py  test_greedy.py
tests/tests_learning/: test_dd_dqn.py  test_double_dqn.py  test_dueling_dqn.py  test_n_step_learning.py  test_noisy_dqn.py  test_per.py
(+3 files in other folders)
