[project]
name = "collabsort-agent"
version = "0.1.1"
description = "An agent for a collaborative sorting task"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Baptiste Pesquet", email = "bpesquet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gym-collabsort",
    "tensorboard>=2.21.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "tyro>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
gym-collabsort = { path = "../gym-collabsort", editable = true }

[tool.ruff.lint]
# Enhance checking. See https://docs.astral.sh/ruff/rules/#flake8-bugbear-b for details
extend-select = ["B"]

[tool.pytest.ini_options]
# Add code coverage reporting
addopts = "--cov=collabsort_agent --cov-report=term-missing"
# Until TensorBoard removes reliance on pkg_resources, which was removed from Python 3.12+:
filterwarnings = ["ignore::UserWarning"]
